--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>タイトル</title>
   </head>
   <body>
-    
+    <p>
+      <a href="https://www.city.fuchu.tokyo.jp/art/kikakuten/kikakuitiran/kuniyoshi21.html">
+        <img scr="img static/IMG_2986.JPG" alt="府中市美術館外見">
+      </a>
+    </p>
   </body>
 </html>
