--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <p>
       <a href="https://www.city.fuchu.tokyo.jp/art/kikakuten/kikakuitiran/kuniyoshi21.html">
-        <img scr="IMG_2986.JPG" alt="府中市美術館外見"/>
+        <img src="IMG_2986.JPG" alt="府中市美術館外見"/>
       </a>
     </p>
   </body>
